# Pymongo

./: .pre-commit-config.yaml  README.md  pyproject.toml
app/: main.py
app/query/: query.py
