[tool.poetry]
name = "pymongotest"
version = "0.1.0"
description = ""
authors = ["HeuiEun Choi <hieun1243@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.1"
uvicorn = "^0.17.6"
pymongo = "^4.1.1"
pre-commit = "^2.18.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
